objects/ASI_HK_CRM_Pre_Approval_Form_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AD_or_AP__c</fullName>
        <label>A&amp;D or A&amp;P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;D</fullName>
                    <default>true</default>
                    <label>A&amp;D</label>
                </value>
                <value>
                    <fullName>MKT A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_Amounts_w_VAT_P10__c</fullName>
        <label>Cash Amounts (w/ VAT) (P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_Amounts_w_VAT_P11__c</fullName>
        <label>Cash Amounts (w/ VAT) (P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_Amounts_w_VAT_P12__c</fullName>
        <label>Cash Amounts (w/ VAT) (P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_Amounts_w_VAT__c</fullName>
        <label>Cash Amounts (w/ VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_Per_Bottle_w_VAT__c</fullName>
        <label>Cash Per Bottle (w/ VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_or_FOC__c</fullName>
        <label>Cash or FOC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; FOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_per_Bottle_A_D_Budget__c</fullName>
        <label>Cash per Bottle (A&amp;D Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contracted_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracted Item</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Items</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_Hr_w_VAT__c</fullName>
        <label>Cost/Hr (w/ VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Expenses_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expenses Product</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Items (Expenses Product)</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Volume_P10__c</fullName>
        <label>FOC Volume (P10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Volume_P11__c</fullName>
        <label>FOC Volume (P11)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Volume_P12__c</fullName>
        <label>FOC Volume (P12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Volume__c</fullName>
        <label>FOC Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_All_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Community_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Free_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Items (Free SKU)</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Pricing_Code__c</fullName>
        <formula>ASI_HK_CRM_SKU_Lookup__r.ASI_MFM_Item_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Pricing_Item__c</fullName>
        <formula>ASI_HK_CRM_SKU_Lookup__r.ASI_MFM_Item_Group__r.Name</formula>
        <label>Pricing Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Trade_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Mechanic_Detail__c</fullName>
        <label>Mechanic Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Over_Budget_Cash_per_Bottle__c</fullName>
        <formula>IF( ASI_CRM_Cash_per_Bottle_A_D_Budget__c &lt; ASI_CRM_Cash_Per_Bottle_w_VAT__c , TRUE, FALSE)</formula>
        <label>Over Budget (Cash per Bottle)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Q1_hrs__c</fullName>
        <label>Q1 (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Q2_hrs__c</fullName>
        <label>Q2 (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Q3_hrs__c</fullName>
        <label>Q3 (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reward_Method__c</fullName>
        <label>Reward Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>達成合約第一季目標簽約量， 於次季發放</fullName>
                </value>
                <value>
                    <fullName>達成合約第二季目標簽約量， 於次季發放</fullName>
                </value>
                <value>
                    <fullName>達成合約第三季目標簽約量， 於次季發放</fullName>
                </value>
                <value>
                    <fullName>達成合約第四季目標簽約量， 於次季發放</fullName>
                </value>
                <value>
                    <fullName>達成合約第五季目標簽約量， 於次季發放</fullName>
                </value>
                <value>
                    <fullName>每季達成目標簽約量，於次季發放</fullName>
                </value>
                <value>
                    <fullName>達成上半年度活動期間目標簽約量， 於第三季發放</fullName>
                </value>
                <value>
                    <fullName>達成下半年度活動期間目標簽約量， 於次年第一季發放</fullName>
                </value>
                <value>
                    <fullName>達成全年度動期間目標簽約量， 於次年第一季發放</fullName>
                </value>
                <value>
                    <fullName>合約生效即發放</fullName>
                </value>
                <value>
                    <fullName>贊助活動結束後即發放</fullName>
                </value>
                <value>
                    <fullName>贊助活動結束後60天發放</fullName>
                </value>
                <value>
                    <fullName>於第一季發放</fullName>
                </value>
                <value>
                    <fullName>於第二季發放</fullName>
                </value>
                <value>
                    <fullName>於第三季發放</fullName>
                </value>
                <value>
                    <fullName>於第四季發放</fullName>
                </value>
                <value>
                    <fullName>於一月發放</fullName>
                </value>
                <value>
                    <fullName>於二月發放</fullName>
                </value>
                <value>
                    <fullName>於三月發放</fullName>
                </value>
                <value>
                    <fullName>於四月發放</fullName>
                </value>
                <value>
                    <fullName>於五月發放</fullName>
                </value>
                <value>
                    <fullName>於六月發放</fullName>
                </value>
                <value>
                    <fullName>於七月發放</fullName>
                </value>
                <value>
                    <fullName>於八月發放</fullName>
                </value>
                <value>
                    <fullName>於九月發放</fullName>
                </value>
                <value>
                    <fullName>於十月發放</fullName>
                </value>
                <value>
                    <fullName>於十一月發放</fullName>
                </value>
                <value>
                    <fullName>於十二月發放</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Total_hrs__c</fullName>
        <formula>ASI_CRM_Q1_hrs__c + ASI_CRM_Q2_hrs__c + ASI_CRM_Q3_hrs__c + ASI_CRM_Q4_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Total (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume_Qty_P10__c</fullName>
        <label>Target Volume Qty (P10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume_Qty_P11__c</fullName>
        <label>Target Volume Qty (P11)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume_Qty_P12__c</fullName>
        <label>Target Volume Qty (P12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_PG_Cost__c</fullName>
        <formula>ASI_CRM_Sub_Total_hrs__c * ASI_CRM_Cost_Hr_w_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PG Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Conditions_for_Payment__c</fullName>
        <label>Conditions for Payment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Contract_Details__c</fullName>
        <label>Contract Details</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Bulk_Buy_Bottle_Option_1__c</fullName>
        <label>Buy Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Bulk_Buy_Bottle_Option_2__c</fullName>
        <label>Buy Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Bulk_Buy_Bottle_Option_3__c</fullName>
        <label>Buy Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Bulk_Free_Bottle_Option_1__c</fullName>
        <label>Free Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Bulk_Free_Bottle_Option_2__c</fullName>
        <label>Free Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Bulk_Free_Bottle_Option_3__c</fullName>
        <label>Free Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Buy_Bottle_Option_1__c</fullName>
        <label>Buy Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Buy_Bottle_Option_2__c</fullName>
        <label>Buy Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Buy_Bottle_Option_3__c</fullName>
        <label>Buy Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Free_Bottle_Option_1__c</fullName>
        <label>Free Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Free_Bottle_Option_2__c</fullName>
        <label>Free Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FOC_Free_Bottle_Option_3__c</fullName>
        <label>Free Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Fixed_Amount__c</fullName>
        <label>Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Investment_Value__c</fullName>
        <label>Investment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_MKT_Sales__c</fullName>
        <label>MKT/Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Mechanic_Category__c</fullName>
        <formula>TEXT(ASI_HK_CRM_Mechanic__r.ASI_HK_CRM_Mechanic_Category__c)</formula>
        <label>Mechanic Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Mechanic__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mechanic</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form_Mechanic__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Items</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Other_Comments__c</fullName>
        <label>Other Comments</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Pack_Factor__c</fullName>
        <formula>ASI_HK_CRM_SKU_Lookup__r.ASI_HK_CRM_Pack_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Pouring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pouring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Pre_Approval_Form_Lookup__c</fullName>
        <label>Pre-Approval Form Lookup</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Items</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Items_Link_To_PAF_Form</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Rebate_Disc_Amt_Per_BT__c</fullName>
        <label>Rebate/Disc Amt (Per BT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Rebate_Disc_Percent__c</fullName>
        <label>Rebate/Disc %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SKU_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Items</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Items_Link_To_PAF_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SKU_Value__c</fullName>
        <label>SKU Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sub_brand__c</fullName>
        <formula>ASI_HK_CRM_SKU_Lookup__r.ASI_MFM_Sub_brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Target_Volume_Qty__c</fullName>
        <label>Target Volume Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pre-Approval Form Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAF Item -{00000000}</displayFormat>
        <label>Pre-Approval Form Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Approval Form Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Conditional_Investment</fullName>
        <active>true</active>
        <label>TW Conditional Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Fixed_Investment</fullName>
        <active>true</active>
        <label>TW Fixed Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_PG_Costs</fullName>
        <active>true</active>
        <label>TW PG Costs</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Variable_Investment</fullName>
        <active>true</active>
        <label>TW Variable Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Variable_Investment_Global_Promotion</fullName>
        <active>true</active>
        <label>TW Variable Investment (Global Promotion)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_PAF_Item_Default</fullName>
        <active>true</active>
        <label>PAF Item - No Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_PAF_Item_FOC</fullName>
        <active>true</active>
        <label>PAF Item - FOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_PAF_Item_FOC_Bulk</fullName>
        <active>true</active>
        <label>PAF Item - FOC Bulk</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_PAF_Item_Fixed_Amount</fullName>
        <active>true</active>
        <label>PAF Item - Fixed Amount</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_PAF_Item_Variable</fullName>
        <active>true</active>
        <label>PAF Item - Variable</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>